# qmri

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/constants/: index.html
api/diffusion/: index.html
api/dro/: index.html
api/errors/: index.html
api/fitting/: index.html
api/perfusion/: index.html
api/pipelines/: index.html
api/relaxometry/: index.html
api/thermometry/: index.html
binder/: environment.yml  postBuild
changelog/: index.html
cli/: index.html
contributing/: index.html
contributing/adding-modules/: index.html
contributing/architecture/: index.html
contributing/setup/: index.html
contributing/style-guide/: index.html
contributing/testing/: index.html
docs/: changelog.md  cli.md  index.md
docs/api/: constants.md  diffusion.md  dro.md  errors.md  fitting.md  perfusion.md  pipelines.md  relaxometry.md  thermometry.md
docs/contributing/: adding-modules.md  architecture.md  index.md  setup.md  style-guide.md  testing.md
docs/equations/: diffusion.md  perfusion.md  relaxometry.md  thermometry.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/tutorials/: index.md
docs/user-guide/: diffusion.md  dro.md  perfusion.md  relaxometry.md  thermometry.md
equations/diffusion/: index.html
equations/perfusion/: index.html
equations/relaxometry/: index.html
equations/thermometry/: index.html
examples/jupyter/: 01_adc_fitting_workflow.ipynb  02_t1_mapping_synthetic.ipynb  03_asl_perfusion_quantification.ipynb  04_method_comparison_benchmark.ipynb  05_noise_sensitivity_analysis.ipynb
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_namespace.py
tests/test_cli/: __init__.py  test_diffusion.py  test_main.py  test_perfusion.py  test_transfer.py
tests/test_diffusion/: test_adc.py
tests/test_dro/: __init__.py  test_dwi.py  test_perfusion.py  test_relaxometry.py
tests/test_errors/: __init__.py  test_metrics.py
tests/test_fitting/: __init__.py  test_least_squares.py
tests/test_io/: __init__.py  test_bids.py  test_nifti.py
tests/test_noise/: __init__.py  test_gaussian.py  test_rician.py
tests/test_perfusion/: __init__.py  test_asl.py  test_gkm.py
tests/test_pipelines/: test_asl.py  test_mtr.py  test_thermometry.py
tests/test_relaxometry/: __init__.py  test_t1.py  test_t2.py
tests/test_sequences/: __init__.py  test_gre.py  test_ir.py  test_se.py
tests/test_thermometry/: __init__.py  test_multiecho.py  test_prf.py
tests/test_transfer/: test_mtr.py
tests/test_utils/: test_safe_divide.py
tests/test_viz/: __init__.py  test_colormaps.py  test_diagnostics.py  test_maps.py
tutorials/: index.html
user-guide/diffusion/: index.html
(+4 files in other folders)
